--- a/src/Tc.Abp.AspNetCore/Components/RedirectToLogin.razor
+++ b/src/Tc.Abp.AspNetCore/Components/RedirectToLogin.razor
@@ -1,17 +1,9 @@
-﻿@inject NavigationManager Navigation
-@inject IJSRuntime JSRuntime
+﻿@inherits TcAbpComponentBase
+ 
 
 @code {
     protected override void OnInitialized()
     {
-        bool isWebAssembly = JSRuntime is IJSInProcessRuntime;
-        if (isWebAssembly)
-        {
-            Navigation.NavigateTo($"authentication/login?returnUrl={Uri.EscapeDataString(Navigation.Uri)}");
-        }
-        else
-        {
-            Navigation.NavigateTo($"account/login?returnUrl={Uri.EscapeDataString(Navigation.Uri)}", true);
-        }
+        this.RedirectToLogin();
     }
 }
