--- a/src/Tc.Abp.AspNetCore.UI.Radzen/Tc/Abp/AspNetCore/Components/MainLayout.razor
+++ b/src/Tc.Abp.AspNetCore.UI.Radzen/Tc/Abp/AspNetCore/Components/MainLayout.razor
@@ -1,88 +1,54 @@
 ﻿@inherits LayoutComponentBase
-@inject NavigationManager UriHelper
 @namespace Tc.Abp.AspNetCore.Components
+@inject Volo.Abp.Ui.Branding.IBrandingProvider BrandingProvider
 <RadzenDialog />
 <RadzenNotification />
 <RadzenTooltip />
 <RadzenContextMenu />
 
 <RadzenLayout>
-<RadzenHeader>
-    <ChildContent>
-        <div class="row justify-content-start align-items-center">
-            <div class="col-5 d-flex align-items-center">
-                <RadzenSidebarToggle Click="@(args => { sidebarExpanded = !sidebarExpanded; bodyExpanded = !bodyExpanded; })">
-                </RadzenSidebarToggle>
-                <RadzenLabel Text="Radzen Blazor Components" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
-                </RadzenLabel>
-            </div>
-            <div class="col-7 d-flex align-items-center justify-content-end">
-                <div class="d-none d-md-inline-flex align-items-center">
-                    <a href="/docs/" title="Radzen Blazor Components Documentation" class="mx-2 mx-lg-3" target="_blank">Documentation</a>
-                    <a href="https://www.radzen.com/" title="Create .NET Core web applications fast & easy" class="text-nowrap mx-2 mx-lg-3" target="_blank">About Radzen</a>
+    <RadzenHeader>
+        <ChildContent>
+            <div class="row justify-content-start align-items-center">
+                <div class="col-5 d-flex align-items-center">
+                    <RadzenSidebarToggle Click="@(args => { sidebarExpanded = !sidebarExpanded; bodyExpanded = !bodyExpanded; })">
+                    </RadzenSidebarToggle>
+                    <RadzenLabel Text="@BrandingProvider.AppName" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
+                    </RadzenLabel>
                 </div>
-                <RadzenDropDown class="mx-0 mx-lg-3" id="themes" style="width: 220px;" TValue="string" TextProperty="Text" ValueProperty="Value"
-                Data="@Tc.Abp.AspNetCore.UI.ThemeService.Themes" Value="@ThemeService.CurrentTheme" Change="@ChangeTheme" >
-                    <ValueTemplate>
-                        @context.Text Theme
-                    </ValueTemplate>
-                    <Template>
-                        <div style="display: flex; align-items: center; gap: 1rem;">
-                            <svg width="80" height="60" viewBox="0 0 80 60" fill="none" xmlns="http://www.w3.org/2000/svg" style="border-radius: 4px; oveflow: hidden; outline: var(--rz-input-border); min-width: 80px;">
-                                <rect width="80" height="60" fill="@context.Base"/>
-                                <rect x="0" y="4" width="16" height="56" fill="@context.Sidebar"/>
-                                <rect x="24" y="17" width="48" height="32" rx="2" fill="@context.Content"/>
-                                <rect x="43" y="41" width="12" height="4" rx="1" fill="@context.Secondary"/>
-                                <rect x="28" y="21" width="16" height="2" rx="1" fill="@context.TitleText"/>
-                                <rect x="28" y="27" width="40" height="2" rx="1" fill="@context.ContentText"/>
-                                <rect x="28" y="31" width="40" height="2" rx="1" fill="@context.ContentText"/>
-                                <rect x="28" y="35" width="16" height="2" rx="1" fill="@context.ContentText"/>
-                                <rect x="28" y="41" width="12" height="4" rx="1" fill="@context.Primary"/>
-                                <rect width="80" height="6" fill="@context.Header"/>
-                            </svg>
-                            @context.Text
-                            @if (context.Premium)
-                            {
-                                <RadzenBadge title="To use it in your application you need an active Radzen Professional or Enterprise subscription.">PRO</RadzenBadge>
-                            }
-                        </div>
-                    </Template>
-                </RadzenDropDown>
-                <LoginDisplay/>
-               
+                <NavToolbar />
             </div>
-        </div>
-    </ChildContent>
-</RadzenHeader>
-<RadzenBody @ref="@body0" @bind-Expanded="@bodyExpanded">
-    <ChildContent>
-        <RadzenContentContainer Name="main">
-            <div class="container-fluid example-container">
-                <div class="row">
-                    <div class="col-12 pt-4 pb-5 px-3 px-lg-5">
-                        @Body
-                      
+        </ChildContent>
+    </RadzenHeader>
+    <RadzenBody @ref="@body0" @bind-Expanded="@bodyExpanded">
+        <ChildContent>
+            <RadzenContentContainer Name="main">
+                <div class="container-fluid example-container">
+                    <div class="row">
+                        <div class="col-12 pt-4 pb-5 px-3 px-lg-5">
+                            @Body
 
-                        <RadzenText TextStyle="TextStyle.Body1" TextAlign="TextAlign.Center" Class="mt-5 mb-3">
-                            <RadzenLabel Text="Radzen Blazor Components, &copy; 2018-2022 Radzen."></RadzenLabel>
-                            <a href="https://github.com/radzenhq/radzen-blazor" target="_blank">Source Code</a> licensed under
-                            <a href="https://github.com/radzenhq/radzen-blazor/blob/master/LICENSE" target="_blank">MIT</a>
-                        </RadzenText>
-                        <RadzenText TextStyle="TextStyle.Body1" TextAlign="TextAlign.Center">
-                            <Social />
-                        </RadzenText>
+
+                            <RadzenText TextStyle="TextStyle.Body1" TextAlign="TextAlign.Center" Class="mt-5 mb-3">
+                                <RadzenLabel Text="Radzen Blazor Components, &copy; 2018-2022 Radzen."></RadzenLabel>
+                                <a href="https://github.com/radzenhq/radzen-blazor" target="_blank">Source Code</a> licensed under
+                                <a href="https://github.com/radzenhq/radzen-blazor/blob/master/LICENSE" target="_blank">MIT</a>
+                            </RadzenText>
+                            <RadzenText TextStyle="TextStyle.Body1" TextAlign="TextAlign.Center">
+                                <Social />
+                            </RadzenText>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </RadzenContentContainer>
-    </ChildContent>
-</RadzenBody>
-<RadzenSidebar @ref="@sidebar0" @bind-Expanded="@sidebarExpanded" class="demos-sidebar" style="display: flex; flex-direction: column">
-    <div style="padding: 1rem">
-        <RadzenTextBox Placeholder="Find component ..." type="search" @oninput="@FilterPanelMenu" style="width: 100%" />
-    </div>
-    <div style="flex: 1; overflow: auto">
-    <RadzenPanelMenu Match="NavLinkMatch.Prefix" Click="@PanelMenuClick">
+            </RadzenContentContainer>
+        </ChildContent>
+    </RadzenBody>
+    <RadzenSidebar @ref="@sidebar0" @bind-Expanded="@sidebarExpanded" class="demos-sidebar" style="display: flex; flex-direction: column">
+        <div style="padding: 1rem">
+            <RadzenTextBox Placeholder="Find component ..." type="search" @oninput="@FilterPanelMenu" style="width: 100%" />
+        </div>
+        <div style="flex: 1; overflow: auto">
+            <RadzenPanelMenu Match="NavLinkMatch.Prefix" Click="@PanelMenuClick">
                 <RadzenPanelMenuItem Text="General" Icon="home">
                     <RadzenPanelMenuItem Text="Buttons" Path="buttons" Icon="account_circle"></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Text="Menu" Path="menu" Icon="line_weight"></RadzenPanelMenuItem>
@@ -90,31 +56,31 @@
                     <RadzenPanelMenuItem Text="Dialog" Path="dialog" Icon="perm_media"></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Text="Notification" Path="notification" Icon="announcement"></RadzenPanelMenuItem>
                 </RadzenPanelMenuItem>
-       @* @foreach (var category in examples)
-        {
-            <NavigationItem @bind-Expanded=@category.Expanded Example=@category>
+                @* @foreach (var category in examples)
+                {
+                <NavigationItem @bind-Expanded=@category.Expanded Example=@category>
                 @if (category.Children != null)
                 {
-                    @foreach (var example in category.Children)
-                    {
-                        if (example.Children != null)
-                        {
-                            <NavigationItem @bind-Expanded=@example.Expanded Example=@example>
-                            @foreach (var child in example.Children)
-                            {
-                                <NavigationItem @bind-Expanded=@child.Expanded Example=@child />
-                            }
-                            </NavigationItem>
-                        }
-                        else
-                        {
-                            <NavigationItem @bind-Expanded=@example.Expanded Example=@example />
-                        }
-                    }
+                @foreach (var example in category.Children)
+                {
+                if (example.Children != null)
+                {
+                <NavigationItem @bind-Expanded=@example.Expanded Example=@example>
+                @foreach (var child in example.Children)
+                {
+                <NavigationItem @bind-Expanded=@child.Expanded Example=@child />
                 }
-            </NavigationItem>
-        }*@
-    </RadzenPanelMenu>
-    </div>
-</RadzenSidebar>
+                </NavigationItem>
+                }
+                else
+                {
+                <NavigationItem @bind-Expanded=@example.Expanded Example=@example />
+                }
+                }
+                }
+                </NavigationItem>
+                }*@
+            </RadzenPanelMenu>
+        </div>
+    </RadzenSidebar>
 </RadzenLayout>
